<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpenSchedule</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_app_name">OpenSchedule</string>
    <string name="login_kerberos_id">Kerberos ID</string>
    <string name="login_kerberos_password">Kerberos password</string>
    <string name="login_log_in">Log In</string>
    <string name="login_progress_title">Loading</string>
    <string name="login_progress_logging_in">Logging in&#8230;</string>
    <string name="login_progress_check_mit">Checking for the MIT username and password&#8230;</string>
    <string name="login_toast_unable">Unable to sign in</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="home_title_calendar">Calendar</string>
    <string name="home_title_tasks">Tasks</string>
    <string name="home_title_classes">Classes</string>
    <string name="tasks_text_personal_deadline">Personal Deadline:</string>
    <string name="tasks_pick_time">Pick TIme</string>
    <string name="tasks_pick_date">Pick Date</string>
    <string name="tasks_text_class_deadline">Class Deadline:</string>
    <string name="tasks_others_spent_text">Others Spent: </string>
    <string name="tasks_submit_location_text">Submit Location: </string>
    <string name="task_finished_text">Finished</string>
    <string name="task_just_finished">Just Finished!</string>
    <string name="tasks_user_spent_text">You Spent: </string>
    <string name="subjects_enter_class_hint">Enter Class</string>
    <string name="subjects_suggested_classes_text">Suggested Classes</string>
    <string name="subjects_add_class_button">Browse All MIT Classes</string>
    <string name="title_activity_add_subject">AddSubjectActivity</string>
    <string name="title_activity_subject">SubjectActivity</string>
    <string name="subject_class_description_text">Class Description</string>
    <string name="subject_rating">Rating:</string>
    <string name="calendar_previous_day">Go to the previous day</string>
    <string name="calendar_next_day">Go to the next day</string>
    <string name="tasks_add_task_button">Add Task</string>
    <string name="title_activity_add_task">AddTaskActivity</string>
    <string name="select_subject">Select Class</string>
    <string name="select_assignment">Select Assignment</string>
    <string name="select_assignment_number">Select Number</string>
    <string name="select_actual_deadline">Select Class Deadline</string>
    <string name="select_personal_deadline">Select Personal Deadline</string>
    <string name="enter_submit_location">Enter Submit Location (ex. Online)</string>
    <string name="add_task_done">Done</string>
    <string name="menu_logout">Logout</string>
    <string name="add_task_pick_date">Date</string>
    <string name="add_task_pick_time">Time</string>
    <string name="title_activity_date_time_picker">DateTimePickerActivity</string>
    <string name="date_time_activity_select_text">Select</string>
    <string name="dialog_done">Done</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="time_spent_is_number">Please type in positive number</string>
</resources>
