<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Spinner
        android:id="@+id/add_task_select_subject_dropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/select_subject"
        android:layout_margin="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" 
    	android:layout_margin="8dp" >
        
	    <Spinner
	        android:id="@+id/add_task_select_assignment_dropdown"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1.0"
	        android:prompt="@string/select_assignment" />
	
	    <Spinner
	        android:id="@+id/add_task_select_number_spinner"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:prompt="@string/select_assignment_number" />
	</LinearLayout>

    <!-- Class Deadline -->
    <LinearLayout
        android:id="@+id/add_task_class_deadline_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_margin="8dp" >

        <TextView
            android:layout_height="@dimen/task_attr_height"
            android:layout_width="match_parent"
            android:layout_weight="1.0"
            android:gravity="center_vertical"
            android:text="@string/tasks_text_class_deadline"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/add_task_button_pick_class_date_time"
            android:layout_height="@dimen/task_attr_height"
           	android:layout_width="match_parent"
           	android:layout_weight="1.0"
            android:onClick="showTimePickerDialog"
            android:text="@string/tasks_pick_time" 
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
    </LinearLayout>
    
    <EditText
        android:id="@+id/add_task_submit_location_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_submit_location"
        android:layout_margin="8dp" />
    
    <Button 
        android:id="@+id/add_task_done_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_task_done"
        android:layout_margin="8dp" />
</LinearLayout>
