<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.mit.openschedule.LoginActivity$PlaceholderFragment" >
    
    
    <EditText
        android:id="@+id/login_edittext_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/login_text_appname"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/login_kerberos_id" >
        
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/login_edittext_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/login_edittext_username"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/login_kerberos_password" />

    <Button
        android:id="@+id/login_button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_edittext_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/login_log_in" />

    <TextView
        android:id="@+id/login_text_appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="132dp"
        android:text="@string/login_app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
